# future-shot

./: README.md  pyproject.toml  setup.py
configs/: banking77.softmax.yaml  banking77.yaml  cifar100.yaml  default.yaml  food101.softmax.yaml  food101.yaml
src/future_shot/: callback.py  data.py  few_shot.py  lightning.py  model.py  module.py  trainer.py  utils.py
src/future_shot/extra/: wandb.py
src/future_shot/extra/timm/: model.py  preprocessing.py
src/future_shot/extra/transformer/: lr_scheduler.py  preprocessing.py
