[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
lines_after_imports = 2

[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 119
per-file-ignores = { "__init__.py" = "F401" }
exclude = ["results", "scripts/adapet", "scripts/tfew"]

[tool.pytest]
testpaths = ["tests"]
addopts = "--cov=setfit --durations=10"

[project]
name = "future-shot"
version = "0.0.1"
description = "FutureShot: Few-Shot Learning for high-dimensional classification problems"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["machine learning", "fewshot learning"]
authors = [{ name = "Fernando H. F. Camargo", email = "fernando.camargo.ai@gmail.com" }]
maintainers = [{ name = "Fernando H. F. Camargo", email = "fernando.camargo.ai@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.11.0",
    "pytorch-lightning>=2.0.0",
    "jsonargparse[signatures]",
    "datasets>=2.3.0",
    "evaluate>=0.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
transformers = ["sentence-transformers>=2.2.2"]
timm = ["timm>=0.9"]
wandb = ["wandb"]

[project.urls]
homepage = "https://github.com/fernandocamargoai/future-shot"
repository = "https://github.com/fernandocamargoai/future-shot"
documentation = "https://github.com/fernandocamargoai/future-shot/blob/main/README.md"